# isA_MCP

./: .cursorrules  .dockerignore  .env.example  .env.template  .gitignore  AWS_EC2_DEPLOYMENT_ANALYSIS_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.graphrag  Dockerfile.rag  FILE_ORGANIZATION.md  ICP.md  INTEGRATION_FIX.md  MIGRATION_GUIDE.md  PAGE_LEVEL_MULTIMODAL_RAG.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  SESSION_ISSUE_DIAGNOSIS.md  SHOPIFY_INTEGRATION_STATUS.md  SaaS_Readiness_Assessment.md  __init__.py  agent_execution_trace.json  ai_enhanced_analysis_20250809_023428.json  apply_user_id_fix.py  cleanup_and_reorganize.py  config.yaml  conftest.py  debug_failing_tools.py  debug_memory_search.py  debug_search.py  debug_similarity.py  deploy.sh  docker-compose.rag.yml  docker-compose.yml  enhanced_ab.csv  enhanced_sales.csv  error_fixes_summary.md  fastapi_mcp_server.py  (+42 more)
tools/external_services/testplan_service/: README.md  comprehensive_extraction_results.md  config.py  main.py  perfect_match_template.xlsx  pyproject.toml  pytest.ini  requirements.txt  test_batch_llm.py  test_working_2_docs.py
tools/external_services/testplan_service/data_source/PTCRB/: NAPRD03 TestCaseStatus_Version_6.20_as_of_2025-04-12.xlsx
tools/external_services/testplan_service/data_source/test_cases/: Interlab_EVO_Feature_Spreadsheet_PDX-256_PDX-256_PICS_All_2025-09-20_18_58_46.xlsx  Interlab_EVO_Feature_Spreadsheet_Template_All_20250920.xlsx  PDX-256_All_2025-09-20_19_32_17_0.00%.xlsx  transformation_analysis.json  ~$Interlab_EVO_Feature_Spreadsheet_PDX-256_PDX-256_PICS_All_2025-09-20_18_58_46.xlsx
tools/external_services/testplan_service/database/: schema_update.sql
tools/external_services/testplan_service/docs/: 01_SYSTEM_ARCHITECTURE.md  02_DATA_FLOW_AND_EXTRACTION.md  03_IMPLEMENTATION_GUIDE.md  COMPREHENSIVE_PROJECT_SUMMARY.md  PARAMETER_EXTRACTOR_ANALYSIS.md  TEMPLATE_ACCURACY_REPORT.md  TEMPLATE_REVERSE_ENGINEERING.md  bugs.md  combination_generation_logic.md  test_plan_calculation.md
tools/external_services/testplan_service/docs/archive/: COMPREHENSIVE_PROJECT_SUMMARY.md  CURRENT_DATA_FLOW_AND_FILES.md  PICS_MAPPING_DISCOVERY.md  PICS_TO_TESTPLAN_DATA_REQUIREMENTS.md  SYSTEM_ARCHITECTURE_EXPLANATION.md  TABLE_STRUCTURE_AND_DATA_MAPPING.md  bugs.md  initial_design.md  test_plan.md
tools/external_services/testplan_service/docs/projects/: wk_20250923.md
tools/external_services/testplan_service/frontend/: README-React.md  README.md  index.html  package-lock.json  package.json  start_demo.py  vite.config.js
tools/external_services/testplan_service/frontend/js/: api.js  app.js  auth.js  components.js  dashboard.js  testplan.js  utils.js
tools/external_services/testplan_service/frontend/src/: App.jsx  main.jsx
tools/external_services/testplan_service/outputs/: 34.121-2_34121-2-f10_applicability.json  34.121-2_34121-2-f10_complete.json  34.121-2_34121-2-f10_conditions.json  34123_test_mappings.json  34123_testplan_with_valid_combos.csv  36.523-2_36523-2-i80_applicability.json  36.523-2_36523-2-i80_complete.json  36.523-2_36523-2-i80_conditions.json  36521_test_mappings_cleaned.json  37.571-2_37571-2-h40_applicability.json  37.571-2_37571-2-h40_complete.json  37.571-2_37571-2-h40_conditions.json  combinations_full.json  combinations_pairwise.json  combinations_priority.json  corrected_supported_pics.json  expansion_validation_results.json  final_test_output.json  final_testplan_with_valid_combos.csv  template_based_test_plan.json  test_pics_extraction.json  test_pics_extraction_v2.json  test_pics_extraction_v2.xlsx
tools/external_services/testplan_service/scripts/: analyze_36521_2_structure.py  analyze_3gpp_docs.py  analyze_excel_transformation.py  enhanced_data_extractor.py  extract_36_series_applicability.py  extract_all_3gpp_docs.py  extract_applicability_table.py  extract_complete_conditions.py  prepare_real_data.py  test_34123_with_valid_combos.py  test_e2e_final_with_valid_combos.py
tools/external_services/testplan_service/services/: __init__.py  data_initialization_service.py  pics_logic_engine.py
tools/external_services/testplan_service/test_fixed_output/: 36.523-2_36523-2-i80_applicability.json  36.523-2_36523-2-i80_complete.json  36.523-2_36523-2-i80_conditions.json
tools/external_services/testplan_service/test_llm_output/: 36.523-2_36523-2-i80_applicability.json  36.523-2_36523-2-i80_complete.json  36.523-2_36523-2-i80_conditions.json
tools/external_services/testplan_service/test_output/: 36.523-2_36523-2-i80_applicability.json  36.523-2_36523-2-i80_complete.json  36.523-2_36523-2-i80_conditions.json
(+2224 files in other folders)
